Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: saad-deploy
  name: saad-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: saad-deploy
  template:
    metadata:
      labels:
        app: saad-deploy
    spec:
      containers:
      - name: ict-project-7
        image: muhammadsaadkhan5/ict_project:8
        ports:
        - containerPort: 80

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5

        volumeMounts:
        - name: temp-storage
          mountPath: /data

      volumes:
      - name: temp-storage
        persistentVolumeClaim:
          claimName: saad-pvc
