Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:
      - path: /ict
        pathType: Prefix
        backend:
          service:
            name: saad-service
            port:
              number: 80

      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-nodeport-service
            port:
              number: 80
